--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "babel-loader": "^8.0.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.6.1"
   }
 }
